// Produced by Acceleo Cpp Generator 0.0.7-R5S1

import "ccsds_mal/types.proto";
import "ccsds_mc/ValidityState.proto";
import "ccsds_mc/MonitoringState.proto";

package decommutedParameter.protobuf;

message OperationParameter {
extensions 12 to 112;
    optional ccsds_mal.protobuf.TIME onboardDate = 1;
    optional ccsds_mal.protobuf.TIME groundDate = 2;
    optional ccsds_mal.protobuf.ATTRIBUTE convertedValue = 3;
    optional ccsds_mal.protobuf.ATTRIBUTE rawValue = 4;
    optional ccsds_mal.protobuf.ATTRIBUTE extractedValue = 5;
    optional ccsds_mal.protobuf.USHORT triggerOnCounter = 6;
    optional ccsds_mal.protobuf.USHORT triggerOffCounter = 7;
    optional ccsds_mc.protobuf.MonitoringState monitoringState = 8;
    optional ccsds_mc.protobuf.ValidityState validityState = 9;
    optional ccsds_mal.protobuf.BOOLEAN isObsolete = 10;
    optional ccsds_mal.protobuf.BOOLEAN isNominal = 11;


}
